--- a/front-end/src/login-page.css
+++ b/front-end/src/login-page.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Cinzel+Decorative:400,700|Lato:400,400i,700,700i");
 
 /* 
 font-family: 'Cinzel Decorative', cursive;
@@ -41,7 +40,7 @@ h4,
 }
 
 #app-name {
-    font-family: "Cinzel Decorative", cursive;
+    font-family: 'Lily Script One', cursive;
     font-weight: bold;
 }
 
