--- a/front-end/src/user-home.css
+++ b/front-end/src/user-home.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Cinzel+Decorative:400,700|Lato:400,400i,700,700i');
 
 /* 
 font-family: 'Cinzel Decorative', cursive;
@@ -40,7 +39,7 @@ font-family: 'Lato', sans-serif;
 .left-top {
   padding-top: 5px;
   padding-left: 15px;
-  font-family: 'Cinzel Decorative', cursive;
+  font-family: 'Lily Script One', cursive;
   text-decoration: none;  
   font-weight: bold;
   font-size: 25px;
